Added documents. Unreviewed changes

--- a/requirements/REQ001.yml
+++ b/requirements/REQ001.yml
@@ -1,8 +1,14 @@
 active: true
 derived: false
+header: |
+  Backend
+invented-by: some.guy@email.com
 level: 1.0
 links: []
 normative: true
 ref: ''
-reviewed: null
-text: ''
+reviewed: 9022547ab5079f86cbe83075e6b8cea9
+text: |
+  Functional Backend
+
+  The project **shall** have a functional backend.
