--- a/requirements/frontend/FRNT001.yml
+++ b/requirements/frontend/FRNT001.yml
@@ -2,8 +2,9 @@ active: true
 derived: false
 level: 1.0
 links:
-- REQ001: null
+- REQ001: 9022547ab5079f86cbe83075e6b8cea9
 normative: true
 ref: ''
-reviewed: null
-text: ''
+reviewed: 58a2a5d310abb9b79c5cf92aa86529d1
+text: |
+  Lorem
