--- a/requirements/frontend/FRNT002.yml
+++ b/requirements/frontend/FRNT002.yml
@@ -2,8 +2,9 @@ active: true
 derived: false
 level: 1.1
 links:
-- REQ001: null
+- REQ001: 9022547ab5079f86cbe83075e6b8cea9
 normative: true
 ref: ''
-reviewed: null
-text: ''
+reviewed: 211fa7c3d0335da4130ff93b0b97812b
+text: |
+  Ipsum
