--- a/requirements/frontend/FRNT004.yml
+++ b/requirements/frontend/FRNT004.yml
@@ -2,8 +2,11 @@ active: true
 derived: false
 level: 1.3
 links:
-- REQ002: null
+- REQ002: 2efb7e0f9a47e7a647f40a95dbc44e15
 normative: true
 ref: ''
-reviewed: null
-text: ''
+reviewed: cb56384d7045d1bf4669ca5282d1172e
+text: |
+  Front end requirement.
+
+  Frontend **shall** ...
